create general page structure

--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
 </head>
 <body>
+  <!-- Navigation -->
+  <header>
+    Header
+  </header>
   <main>
     <h1>Welcome to My Website</h1>
   </main>
+
+  <!-- Contact links -->
+  <footer>
+    Footer
+  </footer>
 </body>
 </html>
