fix: font import link, add and style logo
Logo now has Oswald font

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <body>
   <!-- Navigation -->
   <header>
-    Header
+    <a href=index.html>
+      <h1 id="logo">Love running</h1>
+    </a>
   </header>
   <main>
     Body text
