create navigation section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
     <a href=index.html>
       <h1 id="logo">Love running</h1>
     </a>
+    <nav>
+      <ul>
+        <li><a href="" alt="">Home</a></li>
+        <li><a href="" alt="">Gallery</a></li>
+        <li><a href="" alt="">Sign Up</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     Body text
