--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <a href=index.html>
       <h1 id="logo">Love running</h1>
     </a>
-    <nav>
+    <nav id="menu">
       <ul>
-        <li><a href="" alt="">Home</a></li>
-        <li><a href="" alt="">Gallery</a></li>
-        <li><a href="" alt="">Sign Up</a></li>
+        <li><a href="" alt="Home" class="active">Home</a></li>
+        <li><a href="" alt="Gallery">Gallery</a></li>
+        <li><a href="" alt="Sign Up">Sign Up</a></li>
       </ul>
     </nav>
   </header>
