make nav bar responsive; reassign `#menu` ID
Nav bar is now visible by default and flat on tablets and larger screens.
Fixed `#menu` ID being assigned to `ul`, not `nav`

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </a>
     <input type="checkbox" id="nav-toggle" name="nav-toggle">
     <label for="nav-toggle" class="nav-toggle-label">X</label>
-    <nav id="menu">
-      <ul>
+    <nav>
+      <ul id="menu" >
         <li><a href="" alt="Home" class="active">Home</a></li>
         <li><a href="" alt="Gallery">Gallery</a></li>
         <li><a href="" alt="Sign Up">Sign Up</a></li>
