use favicons in footer and nav bar "hamburger"
also removed superfluous alt links from header

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <h1 id="logo">Love running</h1>
     </a>
     <input type="checkbox" id="nav-toggle" name="nav-toggle">
-    <label for="nav-toggle" class="nav-toggle-label">X</label>
+    <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
     <nav>
       <ul id="menu" >
-        <li><a href="" alt="Home" class="active">Home</a></li>
-        <li><a href="" alt="Gallery">Gallery</a></li>
-        <li><a href="" alt="Sign Up">Sign Up</a></li>
+        <li><a href="" class="active">Home</a></li>
+        <li><a href="">Gallery</a></li>
+        <li><a href="">Sign Up</a></li>
       </ul>
     </nav>
   </header>
@@ -39,7 +39,15 @@
 
   <!-- Contact links -->
   <footer>
-    Footer
+    <ul id="menu" >
+      <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)" class="active"><i class="fa-brands fa-square-facebook"></i></a></li>
+      <li><a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)" class="active"><i class="fa-brands fa-square-twitter"></i></a></li>
+      <li><a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our YouTube channel (opens in a new tab)" class="active"><i class="fa-brands fa-square-youtube"></i></a></li>
+      <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)" class="active"><i class="fa-brands fa-instagram"></i></a></li>
+    </ul>
   </footer>
+
+  <!-- fontawesome icons -->
+  <script src="https://kit.fontawesome.com/d332187522.js" crossorigin="anonymous"></script>
 </body>
 </html>
