--- a/signup.html
+++ b/signup.html
@@ -27,14 +27,14 @@
     <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
     <nav>
       <ul id="menu" >
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="signup.html">Sign Up</a></li>
+        <li><a href="signup.html" class="active">Sign Up</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    This is the main page.
+    This is the signup page.
   </main>
 
   <!-- Contact links -->
