--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     </nav>
   </header>
   <main>
-    This is the main page.
+    <section id="hero">
+      Main content
+    </section>
   </main>
 
   <!-- Contact links -->
