--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
   </header>
   <main>
     <section id="hero">
-      Main content
+      <div id="cover-text">
+        <h2>Love Running<h2>
+        <h3>Dublin Docklands & Phoenix Park</h3>
+      <div>
     </section>
   </main>
 
