add and style image for Reasons section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
               </p>
             </div>
           </div>
+          <div id="benefits-image">
+            <div id="circle-cover-bg">
+              <!-- filled with image in CSS -->
+            </div>
+          </div>
         </div>
     </section>
   </main>
