style Reasons section for tablets, fix div structure

--- a/index.html
+++ b/index.html
@@ -52,11 +52,15 @@
                 Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns calories and can build strength.
               </p>
             </div>
+            <div>
               <h3>FEEL STRONG <i class="fa-solid fa-dumbbell"></i></h3>
               <hr>
               <p>
                 Running strengthens your heart by pumping blood more effectively through your body.
               </p>
+            </div>
+          </div>
+          <div id="benefits-mental">
             <div>
               <h3>FEEL FREE <i class="fa-brands fa-fly"></i></h3>
               <hr>
@@ -64,8 +68,6 @@
                 Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic, more awake and, yes, happier.
               </p>
             </div>
-          </div>
-          <div id="benefits-mental">
             <div>
               <h3>GET SOCIAL <i class="fa-solid fa-globe"></i></h3>
               <hr>
