add images to Gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,19 @@
     </nav>
   </header>
   <main>
-    This is the gallery page.
+    <section id="gallery">
+      <div id="photos">
+        <img src="assets/images/athletes.webp" alt="Two athletes running together">
+        <img src="assets/images/girls.webp" alt="Two athletes covered in paint">
+        <img src="assets/images/man.webp" alt="Man covered in paint">
+        <img src="assets/images/mud-run.webp" alt="Two athletes running together">
+        <img src="assets/images/runner1.webp" alt="Countryside with grass">
+        <img src="assets/images/runner2.webp" alt="Woman running">
+        <img src="assets/images/runner3.webp" alt="Runners in water">
+        <img src="assets/images/runner4.webp" alt="Woman running">
+        <img src="assets/images/running_gang.webp" alt="Many people running together">
+      </div>
+    </section>
   </main>
 
   <!-- Contact links -->
