--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,29 @@
     </nav>
   </header>
   <main>
-    This is the signup page.
+    <section id="signup">
+        <form id="signup-form" action="https://formdump.codeinstitute.net" method="post">
+          <h2>Let's get your signed up!</h2>
+          <label for="first_name">First Name</label>
+          <input id="first_name" type="text" name="first_name" value="" required>
+          <label for="last_name">Last Name</label>
+          <input id="last_name" type="text" name="last_name" value="" required>
+          <label for="email_address">Email Address</label>
+          <input id="email_address" type="text" name="email_address" value="" required>
+
+          <div class="radio_buttons"
+            <label for="road">Road</label>
+            <input id="road" type="radio" name="running_preference" value="road" required>
+            <label for="trail">Trail</label>
+            <input id="trail" type="radio" name="running_preference" value="trail" required>
+            <label for="both">Both</label>
+            <input id="both" type="radio" name="running_preference" value="both" required>
+          </div>
+
+          <input class="join.button" type="submit" value="Let's Run!">
+
+        </form>
+    </section>
   </main>
 
   <!-- Contact links -->
