--- a/signup.html
+++ b/signup.html
@@ -33,27 +33,40 @@
       </ul>
     </nav>
   </header>
-  <main>
+  <main id="signup-main">
     <section id="signup">
         <form id="signup-form" action="https://formdump.codeinstitute.net" method="post">
-          <h2>Let's get your signed up!</h2>
-          <label for="first_name">First Name</label>
-          <input id="first_name" type="text" name="first_name" value="" required>
-          <label for="last_name">Last Name</label>
-          <input id="last_name" type="text" name="last_name" value="" required>
-          <label for="email_address">Email Address</label>
-          <input id="email_address" type="text" name="email_address" value="" required>
+          <h2><i class="fa-solid fa-heart-pulse"></i> Let's get your signed up!</h2>
 
-          <div class="radio_buttons"
-            <label for="road">Road</label>
-            <input id="road" type="radio" name="running_preference" value="road" required>
-            <label for="trail">Trail</label>
-            <input id="trail" type="radio" name="running_preference" value="trail" required>
-            <label for="both">Both</label>
-            <input id="both" type="radio" name="running_preference" value="both" required>
+          <div>
+            <label for="first_name">First Name</label>
+            <input id="first_name" class="text-input" type="text" name="first_name" value="" required>
+          </div>
+          <div>
+            <label for="last_name">Last Name</label>
+            <input id="last_name" class="text-input" type="text" name="last_name" value="" required>
+          </div>
+          <div>
+            <label for="email_address">Email Address</label>
+            <input id="email_address" class="text-input" type="text" name="email_address" value="" required>
           </div>
 
-          <input class="join.button" type="submit" value="Let's Run!">
+          <div class="radio-buttons">
+            <div>
+              <label for="road">Road</label>
+              <input id="road" type="radio" name="running_preference" value="road" required>
+            </div>
+            <div>
+              <label for="trail">Trail</label>
+              <input id="trail" type="radio" name="running_preference" value="trail" required>
+            </div>
+            <div>
+              <label for="both">Both</label>
+              <input id="both" type="radio" name="running_preference" value="both" required>
+            </div>
+          </div>
+
+          <input class="join-button" type="submit" value="Let's Run!">
 
         </form>
     </section>
@@ -62,10 +75,10 @@
   <!-- Contact links -->
   <footer>
     <ul id="social-networks" >
-      <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)" class="active"><i class="fa-brands fa-square-facebook"></i></a></li>
-      <li><a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)" class="active"><i class="fa-brands fa-square-twitter"></i></a></li>
-      <li><a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our YouTube channel (opens in a new tab)" class="active"><i class="fa-brands fa-square-youtube"></i></a></li>
-      <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)" class="active"><i class="fa-brands fa-instagram"></i></a></li>
+      <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a></li>
+      <li><a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a></li>
+      <li><a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our YouTube channel (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a></li>
+      <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
     </ul>
   </footer>
 
