fix favicon link

--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
   <!-- Title -->
   <title>Love Running</title>
   <!-- Favicon -->
-  <link rel="icon" hre<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
   <!-- Stylesheet -->
@@ -48,7 +48,7 @@
           </div>
           <div>
             <label for="email_address">Email Address</label>
-            <input id="email_address" class="text-input" type="text" name="email_address" value="" required>
+            <input id="email_address" class="text-input" type="email" name="email_address" value="" required>
           </div>
 
           <div class="radio-buttons">
