--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <main>
     <section id="hero">
       <div id="cover-text">
-        <h2>Love Running<h2>
+        <h2>Love Running</h2>
         <h3>Dublin Docklands & Phoenix Park</h3>
-      <div>
+      </div>
     </section>
 
     <section id="reasons">
@@ -73,12 +73,6 @@
               <hr>
               <p>
                 When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, and inspire you to try new events.
-              </p>
-            </div>
-            <div>
-              <h3></h3>
-              <p>
-
               </p>
             </div>
           </div>
